5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1708_3062.log
== TEST (2019-04-29 15:10:39) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) and (f <= 6):
	if(n == "ESPADA") and (PO >= 100):
		d = f*10
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:10:45) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) and (f <= 6):
	if(n == "ESPADA") and (PO >= 100):
		d = f*10
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:24) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) and (f <= 6):
	if(n == "ESPADA") and (PO >= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:56) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) OR (f <= 6):
	if(n == "ESPADA") and (PO >= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 5
    if(f >= 1) OR (f <= 6):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:12:00) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) or (f <= 6):
	if(n == "ESPADA") and (PO >= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:12:26) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) or (f <= 6):
	if(n == "ESPADA") and (PO <= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:12:36) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) or (f <= 6):
	if(n == "ESPADA") and (PO <= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- EXECUTION TIME:
0.18113
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:29) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO == 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO == 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO == 50):
		d3 = d + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:58) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = d + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:12) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = d + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:21) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor entre 1 e 10: "))

if(f == 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO >= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO >= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:06) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor entre 1 e 10: "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO >= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO >= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:43) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor entre 1 e 10: "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:18:55) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor entre 1 e 10: "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- EXECUTION TIME:
0.129616
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:35) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor entre 1 e 10: "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO == 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO == 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO == 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:23:06) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:24:37) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = d + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:43) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print("d")
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print("d")
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = d + 5
		print("d")
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:52) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print("d")
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print("d")
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = d + 5
		print("d")
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- EXECUTION TIME:
0.14477
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
d
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:26:06) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:43) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:57) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)

-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:58) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:22) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)
	else: 
		("Entrada invalida")
else: 
	("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:45) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)
	else: 
		("Entrada invalida")
else: 
	("PO insuficiente")
-- EXECUTION TIME:
0.203252
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:09) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = input("valor: (1/2/3/4/5/6/7/8/9/10) ")

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)
	else: 
		("Entrada invalida")
else: 
	("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(f >= 1) and (f <= 10):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:16) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = input("valor: (1/2/3/4/5/6/7/8/9/10) ")

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)
	else: 
		("Entrada invalida")
else: 
	("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(f >= 1) and (f <= 10):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:25) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = float(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d = f*10
		print(d)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d = f + 3
		print(d)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d = f + 5
		print(d)
	else: 
		("Entrada invalida")
else: 
	("PO insuficiente")
-- OUTPUT:
90.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:54) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = float(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d3 = f + 5
		print(d3)
	else: 
		("Entrada invalida")
else: 
	("PO insuficiente")
-- OUTPUT:
90.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:20) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = float(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d1 = f*10
		print("d1")
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d2 = f + 3
		print("d2")
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d3 = f + 5
		print("d3")
	else: 
		("Entrada invalida")
else: 
	("PO insuficiente")
-- OUTPUT:
d1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:45) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = float(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and (PO > 50):
		d1 = f*10
		print("d1")
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d2 = f + 3
		print("d2")
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d3 = f + 5
		print("d3")
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
d1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:12) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = float(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and35 (PO > 50):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d3 = f + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 6
    if(n == "ESPADA") and (PO <= 100) and35 (PO > 50):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:23) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = float(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and(PO > 50):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d3 = f + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:37) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = float(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO <= 100) and(PO > 50):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO <= 30) and (PO < 50):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO <= 50) and (PO > 30):
		d3 = f + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:52) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = float(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:13) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:38:25) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("Entrada invalida")
else: 
	print("PO insuficiente")
-- EXECUTION TIME:
0.157676
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:01) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:39:10) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.140396
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:14) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) or (n != "n"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:42:23) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) or (n != "n"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.155133
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:30) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) and (n == "n"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:47) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) or (n == "n"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:43:57) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) or (n == "n"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.1523
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:43) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) and (n == "n"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:44:51) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) and (n == "n"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.202964
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:16) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) and (n == "ESPADA") and (n == "MACHADO") and (n == "MARRETA"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:29) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) and (n == "ESPADA") and (n == "MACHADO") and (n == "MARRETA"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:46) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) and (n == "ESPADA") or (n == "MACHADO") or (n == "MARRETA"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:46:54) 
-- CODE:
PO = float(input("qtd de pecas de ouro: "))
n = input("nome? (ESPADA/MACHADO/MARRETA)" )
f = int(input("valor: (1/2/3/4/5/6/7/8/9/10) "))

if(f >= 1) and (f <= 10) and (n == "ESPADA") or (n == "MACHADO") or (n == "MARRETA"):
	if(n == "ESPADA") and (PO >= 100):
		d1 = f*10
		print(d1)
	elif(n == "MACHADO") and (PO >= 30):
		d2 = f + 3
		print(d2)
	elif(n == "MARRETA") and (PO >= 50):
		d3 = f + 5
		print(d3)
	else: 
		print("PO insuficiente")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.151573
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
